<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/tab_activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tabview_item_bg"
            android:scaleType="center"
            android:contentDescription="@string/access_tab_activity"
            android:src="@drawable/navicon_activity_active" />

        <ImageView
            android:id="@+id/tab_connections"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tabview_item_bg"
            android:scaleType="center"
            android:contentDescription="@string/access_tab_connections"
            android:src="@drawable/navicon_connection_normal" />

        <ImageView
            android:id="@+id/tab_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tabview_item_bg"
            android:scaleType="center"
            android:contentDescription="@string/access_tab_find"
            android:src="@drawable/navicon_find_normal" />

        <ImageView
            android:id="@+id/tab_profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tabview_item_bg"
            android:scaleType="center"
            android:contentDescription="@string/access_tab_profile"
            android:src="@drawable/navicon_profile_normal" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_normal"
        android:layout_alignParentBottom="true"
        android:background="@color/grey_press" />

    <ImageView
        android:id="@+id/indicator_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_view_indicator_bar_height"
        android:layout_alignParentBottom="true" />

</RelativeLayout>